--- a/code/active-record/app/views/employees/show.html.erb
+++ b/code/active-record/app/views/employees/show.html.erb
@@ -1,6 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Guid:</strong>
+  <%= @employee.guid %>
+</p>
+
+<p>
   <strong>First name:</strong>
   <%= @employee.first_name %>
 </p>
