--- a/code/active-remote/app/views/employees/_form.html.erb
+++ b/code/active-remote/app/views/employees/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="field">
     <%= form.label :guid %>
-    <%= form.text_field :guid, id: :employee_guid, readonly: true %>
+    <%= form.text_field :guid, id: :employee_guid %>
   </div>
 
   <div class="field">
