--- a/code/active-record/app/views/employees/index.html.erb
+++ b/code/active-record/app/views/employees/index.html.erb
@@ -5,6 +5,7 @@
 <table>
   <thead>
     <tr>
+      <th>Guid</th>
       <th>First name</th>
       <th>Last name</th>
       <th colspan="3"></th>
@@ -14,6 +15,7 @@
   <tbody>
     <% @employees.each do |employee| %>
       <tr>
+        <td><%= employee.guid %></td>
         <td><%= employee.first_name %></td>
         <td><%= employee.last_name %></td>
         <td><%= link_to 'Show', employee %></td>
